# test-elecciones

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
ballot/: manage.py
ballot/ballot/: asgi.py  settings.py  urls.py  wsgi.py
ballot/voting/: admin.py  models.py  utils.py
ballot/voting/migrations/: 0001_initial.py
ballot/voting/tests/: factories.py  test_utils.py
